<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="#ffffff"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="8">

        <TextView
            android:id="@+id/txtSNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/num" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6.1"
            android:orientation="vertical"
            android:padding="6dp">

            <TextView
                android:id="@+id/txtItemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/restaurant_name"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtItemCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/amount"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.9">

            <Button
                android:id="@+id/btnAddToCart"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:background="@drawable/add_button"
                android:text="@string/add"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnRemoveFromCart"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:background="@drawable/remove_button"
                android:text="@string/remove"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="gone" />
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>