<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_activity_style">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#FF4141"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:title="Hop on board, Register!" />

    <ImageView
        android:id="@+id/imgPersonDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/registerCardDetails"
        android:layout_below="@id/toolbar"
        android:layout_margin="5dp"
        android:src="@drawable/person_details" />

    <androidx.cardview.widget.CardView
        android:id="@+id/registerCardDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableStart="@drawable/ic_name"
                android:drawablePadding="8dp"
                android:hint="@string/name"
                android:inputType="text"
                android:padding="12dp" />

            <EditText
                android:id="@+id/etEmailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="8dp"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress"
                android:padding="12dp" />

            <EditText
                android:id="@+id/etMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableStart="@drawable/ic_mobile"
                android:drawablePadding="5dp"
                android:hint="@string/mobile_number"
                android:inputType="number"
                android:maxLength="10"
                android:padding="12dp" />

            <EditText
                android:id="@+id/etDeliveryAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableStart="@drawable/ic_address"
                android:drawablePadding="5dp"
                android:hint="@string/delivery_address"
                android:inputType="text"
                android:padding="12dp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="5dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:padding="12dp" />

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="5dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="10dp" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/button_style"
                android:text="@string/register"
                android:textColor="#ffffff" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>