<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_activity_style">

    <ImageView
        android:id="@+id/imgPerson"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:padding="5dp"
        android:src="@drawable/my_profile_logo" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgPerson"
        android:layout_margin="15dp"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reset_note"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/otp_valid"
                    android:textColor="#000000"
                    android:textSize="13sp" />

            </LinearLayout>

            <EditText
                android:id="@+id/etMobileNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:drawableStart="@drawable/ic_mobile"
                android:drawablePadding="5dp"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:maxLength="10"
                android:maxLines="1"
                android:padding="10dp" />


            <EditText
                android:id="@+id/etEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="5dp"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress"
                android:padding="10dp" />

            <Button
                android:id="@+id/btnReqOTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/button_style"
                android:text="@string/request_otp"
                android:textColor="@color/background" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>