<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_activity_style"
    tools:context=".fragments.ResetPasswordFragment">

    <ImageView
        android:id="@+id/imgPerson"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:padding="5dp"
        android:src="@drawable/my_profile_logo" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgPerson"
        android:layout_margin="15dp"
        app:cardCornerRadius="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:text="@string/message_reset_password"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etOTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/message"
                android:layout_margin="15dp"
                android:drawableStart="@drawable/ic_otp"
                android:drawablePadding="5dp"
                android:hint="@string/otp_4_digits"
                android:inputType="number"
                android:maxLength="4"
                android:padding="15dp" />

            <EditText
                android:id="@+id/etNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etOTP"
                android:layout_margin="15dp"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="5dp"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:padding="15dp" />

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etNewPassword"
                android:layout_margin="15dp"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="5dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="15dp" />

            <Button
                android:id="@+id/btnReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etConfirmPassword"
                android:layout_margin="10dp"
                android:background="@drawable/button_style"
                android:text="@string/reset_password"
                android:textColor="@color/background" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>