<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_activity_style"
    tools:context=".activity.LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#FF4141"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:title="LOGIN" />

    <ImageView
        android:id="@+id/imgMyProfile"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_margin="40dp"
        android:src="@drawable/my_profile_logo" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgMyProfile"
        android:layout_centerInParent="true"
        android:layout_margin="15dp"
        android:padding="10dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:drawableStart="@drawable/ic_mobile"
                android:drawablePadding="5dp"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:maxLength="10"
                android:maxLines="1"
                android:padding="10dp" />


            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etMobileNumber"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="5dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etPassword"
                android:layout_margin="10dp"
                android:background="@drawable/button_style"
                android:elevation="15dp"
                android:text="@string/login"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/txtForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnLogin"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:text="@string/forgot_password"
                android:textColor="#000000"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:text="@string/sign_up_now"
        android:textColor="#ffffff"
        android:textStyle="bold" />
</RelativeLayout>