<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:elevation="3dp">

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:text="04-06-20"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:text="@string/time"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/llStaticOrderHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDate"
        android:layout_margin="5dp"
        android:background="@drawable/history_box_style"
        app:cardCornerRadius="5dp"
        app:cardElevation="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtResHistoryResName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/restaurant_name"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/txtResHistoryResName"
                android:layout_alignParentEnd="true"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtDelivered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:text="@string/delivered" />

                <ImageView
                    android:id="@+id/imgRedTick"
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:layout_marginEnd="3dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/red_tick" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerResHistoryItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtResHistoryResName"
                android:padding="5dp" />

            <TextView
                android:id="@+id/txtTotalCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:layout_below="@+id/recyclerResHistoryItems"
                android:layout_alignParentEnd="true"
                android:layout_margin="15dp"
                android:text="@string/total_cost_money"
                android:textSize="15sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>